--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <label>CALCULA EL PRECIO DE TU PRODUCTO</label>
+      <label>CALCULA EL PRECIO DE TU PRODUCTO</label><br>
+      <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
       <div class="box box-pad" id="box">
         <div class="data" id="data">
           <input type="text" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
@@ -28,5 +29,6 @@
       <button type="submit" name="btprint" id="print">IMPRIMIR</button>
     </div>
     <script src="code/code.js"></script>
+    <SCRipt src="angular-pdf\src\app\app.component.ts"></SCRipt>
   </body>
 </html>
