nada importante un ico

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width= device-width, initial-scale=1">
     <link rel="stylesheet" href="css/master.css">
+    <link rel="shortcut icon" href="plesi.png">
     <title>Calculadora</title>
   </head>
   <body>
@@ -29,6 +30,5 @@
       <button type="submit" name="btprint" id="print">IMPRIMIR</button>
     </div>
     <script src="code/code.js"></script>
-    <SCRipt src="angular-pdf\src\app\app.component.ts"></SCRipt>
   </body>
 </html>
