--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
       <div class="box box-pad" id="box">
         <div class="data" id="data">
-          <input type="text" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
-          <input type="number" name="unidades" id="unidades" placeholder="CANTIDAD DE INGR.">
-          <input type="number" name="precio" id="precio" placeholder="COSTO DE INGR.">
-          <label for="precio" id='resultado'>PRECIO</label>
+          <input type="text" class= "ingrediente" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
+          <input type="number" class= "unidades" name="unidades" id="unidades" placeholder="CANTIDAD DE INGR.">
+          <input type="number" class= "precio" name="precio" id="precio" placeholder="COSTO DE INGR.">
+          <label for="precio" class= "resultado" id='resultado'>PRECIO</label>
         </div>
 
 
