--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="shortcut icon" href="plesi.png">
     <title>Calculadora</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.4/jspdf.plugin.autotable.min.js"></script>
   </head>
   <body>
     <div class="container">
       <label>CALCULA EL PRECIO DE TU PRODUCTO</label><br>
-      <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
       <div class="box box-pad" id="box">
+        <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
         <div class="data" id="data">
-          <input type="text" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
-          <input type="number" name="unidades" id="unidades" placeholder="CANTIDAD DE INGR.">
-          <input type="number" name="precio" id="precio" placeholder="COSTO DE INGR.">
-          <label for="precio" id='resultado'>PRECIO</label>
+          <input type="text" class= "ingrediente" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
+          <input type="number" class= "unidades" name="unidades" id="unidades" placeholder="CANTIDAD DE INGR.">
+          <input type="number" class= "precio" name="precio" id="precio" placeholder="COSTO DE INGR.">
+          <label for="precio" class= "resultado" id='resultado'>PRECIO</label>
         </div>
 
 
@@ -27,8 +30,11 @@
       </div>
 
       <button type="submit" name="btncal" id="calcular">CALCULAR</button>
-      <button type="submit" name="btprint" id="print">IMPRIMIR</button>
+     <button  id="getPDF" onclick="getPDF()">IMPRIMIR</button>
     </div>
     <script src="code/code.js"></script>
+    <script src="code/pdf.js"></script>
+    <script src="code/html2pdf.bundle.min.js"></script>
   </body>
+
 </html>
