--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
         <label for="total" class= "total" id='total'>TOTAL</label>
         <div class="data" id="data">
-          <input type="text" class= "ingrediente" name="ingrediente" id="ingrediente" placeholder="INGREDIENTE">
-          <input type="number" class= "unidades" name="unidades" id="unidades" placeholder="CANTIDAD DE INGR.">
-          <input type="number" class= "precio" name="precio" id="precio" placeholder="COSTO DE INGR.">
-          <label for="precio" class= "resultado" id='resultado'>PRECIO</label>
+          <input type="checkbox" class="gr" id="gr" >
+            <input type="text" class= "ingrediente" name="ingrediente" id="ingrediente" placeholder="NOMBRE DE INGR">
+            <input type="number" class= "precio" name="precio" id="precio" placeholder="COSTO DE INGR.">
+            <input type="number" class= "pztotal" name="pztotal" id="pztotal" placeholder="PIEZAS TOTALES">
+            <input type="number" class= "pzusar" name="pzusar" id="pzusar" placeholder="PIEZAS A USAR">
+            <label for="precio" class= "resultado" id='resultado'>PRECIO</label>
         </div>
       </div>
       <div class="btn">
@@ -31,6 +33,7 @@
       <button type="submit" name="btncal" id="calcular">CALCULAR</button>
      <button  id="getPDF" onclick="getPDF()">IMPRIMIR</button>
     </div>
+    </script>
     <script src="code/code.js"></script>
     <script src="code/pdf.js"></script>
     <script src="code/html2pdf.bundle.min.js"></script>
