falta estilo en el chackbox

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <input type="text" name="name" id="name" placeholder="NOMBRE DE PRODUCTO" style="font-size: .47em; margin:10px;">
         <label for="total" class= "total" id='total'>TOTAL</label>
         <div class="data" id="data">
-          <input type="checkbox" class="gr" id="gr" >
+          <label class="gra">
+            <span>CAMBIAR A GRAMOS</span>
+            <input type="checkbox" class="gr" id="gr" >  
+          </label>
             <input type="text" class= "ingrediente" name="ingrediente" id="ingrediente" placeholder="NOMBRE DE INGR">
             <input type="number" class= "precio" name="precio" id="precio" placeholder="COSTO DE INGR.">
             <input type="number" class= "pztotal" name="pztotal" id="pztotal" placeholder="PIEZAS TOTALES">
